fixed masthead spacing

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -38,7 +38,7 @@ a {
 .masthead {
 	background-color:rgb(255,255,255);
      width: 100%;
-	 height: 8em;
+	 height: 6em;
 	}
 
 
@@ -314,7 +314,7 @@ the 404 page
 @media only screen and (min-width: 38em) {
 	
 .masthead {
-	 height: 6em;
+	 height: 5em;
 	}
 
 .navicon {
